--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,7 +2,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 /*!
- * insg-info CSS 2018
+ * InSg CSS 2018
  * yuanchao@outlook.sg
  */
 
