add next-bus module

--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -1,9 +1,9 @@
 <mat-divider></mat-divider>
 <footer class="container-fluid row py-5">
-  <section class='col-sm-12 col-md-8'>
+  <section class="col-sm-12 col-md-8">
     <div class="d-flex justify-content-start">
-      <section class='mr-4'>
-        <i class='fa fa-fw fa-anchor'></i> Corporate Gifts
+      <section class="mr-4">
+        <i class="fa fa-fw fa-anchor"></i> Corporate Gifts
         <ul class="list-unstyled">
           <li><a routerLink="/gifts">Gifts Home</a></li>
           <li><a routerLink="/gifts/browse">Products</a></li>
@@ -12,33 +12,48 @@
           <li><a routerLink="/staffs">Staffs</a></li>
         </ul>
       </section>
-      <section class='mr-4'>
-        <i class='fa fa-fw fa-anchor'></i> Web Design
+      <section class="mr-4">
+        <i class="fa fa-fw fa-anchor"></i> Web Design
         <ul class="list-unstyled">
+          <li><a routerLink="/nextbus">Next Bus</a></li>
           <li><a routerLink="/webdev">Home</a></li>
           <li><a routerLink="/webdev/contact">Contacts</a></li>
+          <li><a routerLink="/http">Send Http Request</a></li>
         </ul>
       </section>
-      <section class='mr-4'>
-        <i class='fa fa-fw fa-anchor'></i> Others
+      <section class="mr-4">
+        <i class="fa fa-fw fa-anchor"></i> Others
         <ul class="list-unstyled">
           <li><a routerLink="/dict">Dictionary</a></li>
           <li><a routerLink="/lunch">Lunchfun</a></li>
         </ul>
       </section>
       <section>
-        <i class='fa fa-fw fa-anchor'></i> Development
+        <i class="fa fa-fw fa-anchor"></i> Development
         <ul class="list-unstyled">
           <li><a href="" target="_blank" class="text-muted">Angular</a></li>
-          <li><a href="https://mongodb.org" target="_blank" class="text-muted">Mongodb</a></li>
-          <li><a href="https://nodejs.org" target="_blank" class="text-muted">Node.js</a></li>
+          <li>
+            <a href="https://mongodb.org" target="_blank" class="text-muted"
+              >Mongodb</a
+            >
+          </li>
+          <li>
+            <a href="https://nodejs.org" target="_blank" class="text-muted"
+              >Node.js</a
+            >
+          </li>
         </ul>
       </section>
     </div>
   </section>
-  <section class='col-sm-12 col-md-4 text-center'>
+  <section class="col-sm-12 col-md-4 text-center">
     <p>
-      <img src='/assets/sg_round_icon.png' alt="Singapore flag" class='icon-25' /> Singapore
+      <img
+        src="/assets/sg_round_icon.png"
+        alt="Singapore flag"
+        class="icon-25"
+      />
+      Singapore
     </p>
     <ul class="list-inline">
       <a routerLink="/" class="list-inline-item" matTooltip="whatsapp">
