--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -28,31 +28,11 @@
           <li><a routerLink="/lunch">Lunchfun</a></li>
         </ul>
       </section>
-      <section>
-        <i class="fa fa-fw fa-anchor"></i> Development
-        <ul class="list-unstyled">
-          <li><a href="" target="_blank" class="text-muted">Angular</a></li>
-          <li>
-            <a href="https://mongodb.org" target="_blank" class="text-muted"
-              >Mongodb</a
-            >
-          </li>
-          <li>
-            <a href="https://nodejs.org" target="_blank" class="text-muted"
-              >Node.js</a
-            >
-          </li>
-        </ul>
-      </section>
     </div>
   </section>
   <section class="col-sm-12 col-md-4 text-center">
     <p>
-      <img
-        src="/assets/sg_round_icon.png"
-        alt="Singapore flag"
-        class="icon-25"
-      />
+      <img src="/assets/sg_round_icon.png" alt="Singapore flag" class="icon-25" />
       Singapore
     </p>
     <ul class="list-inline">
