--- a/client/src/app/bus-arrival/home/home.component.html
+++ b/client/src/app/bus-arrival/home/home.component.html
@@ -5,24 +5,14 @@
     <mat-form-field>
       <mat-label>Bus Stop Code</mat-label>
       <input matInput #busStopCode type="text" />
-      <button
-        mat-raised-button
-        matSuffix
-        color="primary"
-        (click)="getBusArrival(busStopCode.value)"
-      >
+      <button mat-raised-button matSuffix color="primary" (click)="getBusArrival(busStopCode.value)">
         Get
       </button>
     </mat-form-field>
   </form>
   <div *ngIf="busTable.length > 0">
     <h4>{{ busStopInfo.Description }}</h4>
-    <table
-      mat-table
-      [dataSource]="busTable"
-      width="100"
-      class="mat-elevation-z8"
-    >
+    <table mat-table [dataSource]="busTable" width="100" class="mat-elevation-z8">
       <ng-container matColumnDef="service">
         <th mat-header-cell *matHeaderCellDef>Service</th>
         <td mat-cell *matCellDef="let bus">{{ bus.service }}</td>
@@ -48,13 +38,7 @@
       <tr mat-row *matRowDef="let row; columns: busTableColumn"></tr>
     </table>
 
-    <button
-      *ngIf="!bExistingBookmark"
-      mat-stroked-button
-      color="primary"
-      (click)="addBusStopBookmark()"
-      class="my-3"
-    >
+    <button *ngIf="!bExistingBookmark" mat-stroked-button color="primary" (click)="addBusStopBookmark()" class="my-3">
       Bookmark this Bus Stop
     </button>
   </div>
@@ -71,11 +55,9 @@
     </mat-action-list>
   </div>
 
-  <div *ngIf="nearbyBusStops.length">
-    <button mat-stroked-button color="primary" (click)="toggleNearbyBusStops()">
-      Toggle nearby Bus Stops
-    </button>
-  </div>
+  <button mat-stroked-button color="primary" (click)="toggleNearbyBusStops()">
+    <b>Toggle nearby Bus Stops</b>
+  </button>
   <div *ngIf="bShowNearbyBusStops && nearbyBusStops.length">
     <mat-action-list *ngFor="let nearby of nearbyBusStops" dense>
       <div mat-list-item>
