update oxford dictionary to v2.

--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer class="container-fluid row py-5">
   <section class="col-sm-12 col-md-8">
     <div class="d-flex justify-content-start">
-      <section class="mr-4">
+      <!-- <section class="mr-4">
         <i class="fa fa-fw fa-anchor"></i> Corporate Gifts
         <ul class="list-unstyled">
           <li><a routerLink="/gifts">Gifts Home</a></li>
@@ -19,12 +19,13 @@
           <li><a routerLink="/webdev/contact">Contacts</a></li>
           <li><a routerLink="/http">Send Http Request</a></li>
         </ul>
-      </section>
-      <section class="mr-4">
+      </section> -->
+      <section class="col-sm-12 mr-4">
         <i class="fa fa-fw fa-anchor"></i> Others
         <ul class="list-unstyled">
+          <li><a routerLink="/busArrival">Bus-Arrival</a></li>
           <li><a routerLink="/dict">Dictionary</a></li>
-          <li><a routerLink="/busArrival">Bus Arrival</a></li>
+          <!-- <li><a href="https://mail.insg.xyz">Email</a></li> -->
           <li><a routerLink="/lunch">Lunchfun</a></li>
         </ul>
       </section>
@@ -32,10 +33,14 @@
   </section>
   <section class="col-sm-12 col-md-4 text-center">
     <p>
-      <img src="/assets/sg_round_icon.png" alt="Singapore flag" class="icon-25" />
+      <img
+        src="/assets/sg_round_icon.png"
+        alt="Singapore flag"
+        class="icon-25"
+      />
       Singapore
     </p>
-    <ul class="list-inline">
+    <!-- <ul class="list-inline">
       <a routerLink="/" class="list-inline-item" matTooltip="whatsapp">
         <span class="sr-only" aria-label="whatsapp"></span>
         <i class="fa fa-fw fa-whatsapp"></i>
@@ -52,7 +57,7 @@
       <a routerLink="/" class="list-inline-item" matTooltip="linkedin">
         <i class="fa fa-fw fa-linkedin"></i>
       </a>
-    </ul>
+    </ul> -->
     <div class="small">Copyright &copy; 2019. All rights reserved.</div>
   </section>
 </footer>
