--- a/client/src/app/dictionary/oxford/oxford.component.html
+++ b/client/src/app/dictionary/oxford/oxford.component.html
@@ -1,37 +1,42 @@
 <section class="container py-4">
   <mat-card>
-    <mat-card-title class="my-4">
-      <h2>Oxford Dictionaries</h2>
+    <mat-card-title class="mt-3 mb-4">
+      <!-- <h2>Oxford Dictionaries</h2> -->
+      <img src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png" height="60" />
     </mat-card-title>
     <mat-card-content>
-      <div class="mb-4">
-        <mat-form-field>
+      <div class="col-sm-12 col-md-4 mb-4">
+        <div class="input-group">
           <input
-            matInput
-            placeholder="Word to check"
             #oxfordInput
             type="text"
-            (keyup.enter)="getOxfordDefinition(oxfordInput.value)"
+            class="form-control"
+            placeholder="work to check"
           />
-          <i
-            matSuffix
-            class="fa fa-search"
-            (click)="getOxfordDefinition(oxfordInput.value)"
-          ></i>
-        </mat-form-field>
-        <!-- <button mat-raised-button color="primary" (click)="getOxfordDefinition(oxfordInput.value)">
-          <i class="fa fa-search"></i>
-        </button> -->
+          <div class="input-group-append">
+            <button
+              class="btn btn-outline-primary fa fa-search"
+              type="button"
+              (click)="getOxfordDefinition(oxfordInput.value)"
+            ></button>
+          </div>
+        </div>
       </div>
       <div *ngIf="bChecking">
         <mat-spinner></mat-spinner>
       </div>
       <div *ngIf="!bChecking">
         <div *ngIf="checkEntriesResult.lexicalEntries?.length > 0">
-          <p>Definitions</p>
+          <p>Definitions:</p>
           <div *ngFor="let lexicalEntry of checkEntriesResult.lexicalEntries">
             <b>{{ lexicalEntry?.lexicalCategory }}</b>
-            [<b>{{lexicalEntry?.pronunciations[0].phoneticSpelling}}</b>]
+            [<b>{{ (lexicalEntry?.pronunciations)[0].phoneticSpelling }}</b>
+            <audio controls>
+              <source
+                src="{{ (lexicalEntry?.pronunciations)[0].audioFile }}"
+                type="audio/mpeg"
+              /></audio
+            >]
             <ol>
               <li *ngFor="let item of lexicalEntry.entries; let i = index">
                 {{ item }}
