--- a/client/src/app/dictionary/oxford/oxford.component.html
+++ b/client/src/app/dictionary/oxford/oxford.component.html
@@ -1,24 +1,18 @@
 <section class="container py-4">
   <mat-card>
     <mat-card-title class="mt-3 mb-4">
-      <!-- <h2>Oxford Dictionaries</h2> -->
-      <img src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png" height="60" />
+      <div class="col-sm-12 col-md-4">
+        <!-- <img src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png" height="60" /> -->
+        <img src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png" />
+      </div>
     </mat-card-title>
     <mat-card-content>
       <div class="col-sm-12 col-md-4 mb-4">
         <div class="input-group">
-          <input
-            #oxfordInput
-            type="text"
-            class="form-control"
-            placeholder="work to check"
-          />
+          <input #oxfordInput type="text" class="form-control" placeholder="work to check" />
           <div class="input-group-append">
-            <button
-              class="btn btn-outline-primary fa fa-search"
-              type="button"
-              (click)="getOxfordDefinition(oxfordInput.value)"
-            ></button>
+            <button class="btn btn-outline-primary fa fa-search" type="button"
+              (click)="getOxfordDefinition(oxfordInput.value)"></button>
           </div>
         </div>
       </div>
@@ -32,11 +26,7 @@
             <b>{{ lexicalEntry?.lexicalCategory }}</b>
             [<b>{{ (lexicalEntry?.pronunciations)[0].phoneticSpelling }}</b>
             <audio controls>
-              <source
-                src="{{ (lexicalEntry?.pronunciations)[0].audioFile }}"
-                type="audio/mpeg"
-              /></audio
-            >]
+              <source src="{{ (lexicalEntry?.pronunciations)[0].audioFile }}" type="audio/mpeg" /></audio>]
             <ol>
               <li *ngFor="let item of lexicalEntry.entries; let i = index">
                 {{ item }}
