--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -23,23 +23,16 @@
       <section class="col-sm-12 mr-4">
         <i class="fa fa-fw fa-anchor"></i> Others
         <ul class="list-unstyled">
-          <li><a routerLink="/busArrival">Bus-Arrival</a></li>
+          <li><a routerLink="/bus">Bus-Arrival</a></li>
           <li><a routerLink="/dict">Dictionary</a></li>
-          <!-- <li><a href="https://mail.insg.xyz">Email</a></li> -->
-          <li><a routerLink="/lunch">Lunchfun</a></li>
+          <li><a href="https://mail.insg.xyz">Email</a></li>
+          <!-- <li><a routerLink="/lunch">Lunchfun</a></li> -->
         </ul>
       </section>
     </div>
   </section>
   <section class="col-sm-12 col-md-4 text-center">
-    <p>
-      <img
-        src="/assets/sg_round_icon.png"
-        alt="Singapore flag"
-        class="icon-25"
-      />
-      Singapore
-    </p>
+    <div>We <i class="fa fa-heart text-danger"></i> InSG</div>
     <!-- <ul class="list-inline">
       <a routerLink="/" class="list-inline-item" matTooltip="whatsapp">
         <span class="sr-only" aria-label="whatsapp"></span>
@@ -59,5 +52,9 @@
       </a>
     </ul> -->
     <div class="small">Copyright &copy; 2019. All rights reserved.</div>
+    <div>
+      <img src="/assets/sg_round_icon.png" alt="Singapore flag" class="icon-25" />
+      Singapore
+    </div>
   </section>
 </footer>
