--- a/client/src/app/bus-arrival/home/home.component.html
+++ b/client/src/app/bus-arrival/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container py-4">
   <h1>Bus Arrival Time</h1>
-  <h6>Get next bus arrival time by bus stop code.</h6>
+  <h6>Get bus arrival time by bus stop code.</h6>
   <form class="py-4">
     <mat-form-field>
       <mat-label>Bus Stop Code</mat-label>
@@ -37,9 +37,20 @@
       <tr mat-header-row *matHeaderRowDef="busTableColumn"></tr>
       <tr mat-row *matRowDef="let row; columns: busTableColumn"></tr>
     </table>
+    <div class="small mt-1">
+      Bus Load
+      <ul>
+        <li>SEA: seats available</li>
+        <li>SDA: standing available</li>
+        <li>LSD: limited standing</li>
+      </ul>
+    </div>
 
     <button *ngIf="!bExistingBookmark" mat-stroked-button color="primary" (click)="addBusStopBookmark()" class="my-3">
       Bookmark this Bus Stop
+    </button>
+    <button mat-stroked-button color="primary" (click)="getBusArrival(currentBusStopCode)" class="my-3">
+      Refresh
     </button>
   </div>
 
@@ -47,7 +58,7 @@
     <h3>Bus Stop Bookmark</h3>
     <mat-action-list *ngFor="let busStop of busStopBookmark" dense>
       <div mat-list-item>
-        <button (click)="getBusArrival(busStop.BusStopCode)">
+        <button mat-stroked-button (click)="getBusArrival(busStop.BusStopCode)">
           ({{ busStop.BusStopCode }}) {{ busStop.Description }}
         </button>
         <button (click)="deleteBusStopBookmark(busStop)">x</button>
@@ -58,6 +69,7 @@
   <button mat-stroked-button color="primary" (click)="toggleNearbyBusStops()">
     <b>Toggle nearby Bus Stops</b>
   </button>
+  <mat-spinner *ngIf="bSpinnerShowNearbyBusStops" class="small"></mat-spinner>
   <div *ngIf="bShowNearbyBusStops && nearbyBusStops.length">
     <mat-action-list *ngFor="let nearby of nearbyBusStops" dense>
       <div mat-list-item>
@@ -67,5 +79,9 @@
         </button>
       </div>
     </mat-action-list>
+  </div>
+
+  <div class="mt-5 small">
+    Powered by <a href="https://data.gov.sg" target="_blank">Data.gov.sg</a>
   </div>
 </div>
