--- a/client/src/app/web-dev/contact/contact.component.html
+++ b/client/src/app/web-dev/contact/contact.component.html
@@ -10,7 +10,7 @@
       <i class='fa fa-id-card'></i> : Yuan Chao (YC)
     </p>
     <p>
-      <i class='fa fa-envelope'></i> : yuanchao@outlook.sg
+      <i class='fa fa-envelope'></i> : yc@insg.xyz
     </p>
     <p>
       <i class='fa fa-wechat'></i> WeChat : yxlych
