--- a/client/src/app/gifts-cart/cart-home.component.html
+++ b/client/src/app/gifts-cart/cart-home.component.html
@@ -2,7 +2,7 @@
   <h2 class="pt-5 pb-4">View Cart</h2>
 
   <div *ngIf="!cart.cartItems.length" class="my-5">
-    <h4>The cart is empty. Enjoy shopping.</h4>
+    <h4>The cart is empty; enjoy shopping.</h4>
   </div>
   <div *ngIf="cart.cartItems.length">
     <mat-list>
