--- a/client/src/app/staffs/staffs-navbar/staffs-navbar.component.html
+++ b/client/src/app/staffs/staffs-navbar/staffs-navbar.component.html
@@ -12,7 +12,7 @@
     <button mat-button (click)="signOut()" matTooltip="User Info">
       <i class="fa fa-fw fa-info"></i>
     </button>
-    <button mat-button routerLink="/staffs/registerLogin/login" matTooltip="sign in">
+    <button mat-button routerLink="/staffs/auth/login" matTooltip="sign in">
       <i class="fa fa-sign-in"></i>
     </button>
     <button mat-button (click)="signOut()" matTooltip="sign out">
