--- a/client/src/app/gifts-home/contact/contact.component.html
+++ b/client/src/app/gifts-home/contact/contact.component.html
@@ -1,6 +1,6 @@
-<div class="mt-5">
+<div class="container-fluid mt-5">
   <h2>
-    <i class="fa fa-leaf"></i>Contact Me
+    <i class="fa fa-leaf"></i> Contact Me
   </h2>
   <section class="card-group text-center mt-4 mx-5">
     <mat-card class="col-sm-12 col-md-4">
@@ -30,7 +30,7 @@
       </h4>
     </mat-card>
   </section>
-  <h3 class="mt-5 text-center">Let's get in touch, send me a message.</h3>
+  <h3 class="mt-5 text-center"><b>Let's get in touch, send me a message.</b></h3>
   <div class="card-group mt-4">
     <mat-card class="col-sm-12 col-md-6">
       <send-message></send-message>
