--- a/client/src/app/gifts-home/home-categories/home-categories.component.html
+++ b/client/src/app/gifts-home/home-categories/home-categories.component.html
@@ -2,7 +2,7 @@
   <h2>
     <i class="fa fa-fw fa-leaf"></i> Products Categories
   </h2>
-  <mat-spinner *ngIf="loading" class="m-4"></mat-spinner>
+  <mat-spinner *ngIf="loading" class="m-4">Loading...</mat-spinner>
   <section class="container">
     <div *ngFor="let samplesOfCategory of samplesOfCategories" class="pt-4">
       <div class="d-flex justify-content-between">
@@ -10,7 +10,9 @@
           <h3>{{getCategoryName(samplesOfCategory)}}</h3>
         </span>
         <span class="float-right">
-          <a (click)="browseCategory(samplesOfCategory._id.category)">
+          <a <!-- [routerLink]="['/gifts/browse', samplesOfCategory._id.category]" -->
+            (click)="browseCategory(samplesOfCategory._id.category)"
+            >
             view more
           </a>
         </span>
