--- a/client/src/app/gifts-track-order/track-order.component.html
+++ b/client/src/app/gifts-track-order/track-order.component.html
@@ -4,19 +4,12 @@
     <mat-form-field>
       <mat-label>Order No.</mat-label>
       <div class="input-group">
-        <input type="text" class="form-control" #orderNo required />
+        <input type="text" class="form-control" placeholder="Order No." #orderNo required />
         <div class="input-group-append">
-          <button
-            class="btn btn-primary fa fa-search"
-            type="button"
-            (click)="ShowOrderStatus(orderNo.value)"
-          ></button>
+          <button class="btn btn-primary fa fa-search" type="button" (click)="ShowOrderStatus(orderNo.value)"></button>
         </div>
       </div>
     </mat-form-field>
-    <!-- <button mat-raised-button color="primary" (click)="ShowOrderStatus(orderNo.value)">
-      Check
-    </button> -->
   </form>
   <div class="p-3">
     <table>
