--- a/client/src/app/gifts/gifts-navbar/gifts-navbar.component.html
+++ b/client/src/app/gifts/gifts-navbar/gifts-navbar.component.html
@@ -1,32 +1,45 @@
 <mat-toolbar color="primary">
   <span>
-    <a routerLink="/">
-      <button mat-button class="text-white">GIFTS</button>
+    <a routerLink="/gifts">
+      <button mat-button class="text-white font-weight-bold">GIFTS</button>
     </a>
   </span>
   <span class="ml-auto">
     <a routerLink="/gifts/browse">
-      <button mat-button class="text-white">HotSales</button>
+      <button mat-button class="text-white font-weight-bold">HotSales</button>
     </a>
     <a routerLink="/gifts/browse" matTooltip="Browse Products">
-      <button mat-button class="text-white">Products</button>
+      <button mat-button class="text-white font-weight-bold">Products</button>
     </a>
     <a routerLink="/gifts/cart" matTooltip="View Cart">
-      <button *ngIf="cartItemCount<=0" mat-button class="text-white">Cart</button>
-      <button *ngIf="cartItemCount>0" mat-button class="text-white" matBadge="{{cartItemCount}}"
+      <button *ngIf="cartItemCount<=0" mat-button class="text-white font-weight-bold">Cart</button>
+      <button *ngIf="cartItemCount>0" mat-button class="text-white font-weight-bold" matBadge="{{cartItemCount}}"
         matBadgeColor="accent">Cart</button>
     </a>
     <a routerLink="/gifts/trackOrder" matTooltip="Track Order">
-      <button mat-button class="text-white">Order</button>
+      <button mat-button class="text-white font-weight-bold">Order</button>
     </a>
     <a routerLink="/gifts/auth/register" matTooltip="Contact us">
-      <button mat-button class="text-white">Support</button>
+      <button mat-button class="text-white font-weight-bold">Support</button>
     </a>
     <a *ngIf="!bLoginStatus" routerLink="/gifts/auth/login">
-      <button mat-button class="text-white">Login</button>
+      <button mat-button class="text-white font-weight-bold">Login</button>
     </a>
     <a *ngIf="bLoginStatus">
-      <button mat-button (click)="logout()" class="text-white">Logout</button>
+      <button mat-button (click)="logout()" class="text-white font-weight-bold">Logout</button>
     </a>
+  </span>
+  <span class="ml-auto">
+    <button mat-icon-button [matMenuTriggerFor]="giftsNav">
+      <i class="fa fa-align-justify"></i>
+    </button>
+    <mat-menu #giftsNav="matMenu">
+      <a mat-menu-item routerLink="/gifts/browse">HotSales</a>
+      <a mat-menu-item routerLink="/gifts/browse">Products</a>
+      <a mat-menu-item routerLink="/gifts/cart">Cart</a>
+      <a mat-menu-item routerLink="/gifts/trackOrder">Order</a>
+      <a mat-menu-item routerLink="/gifts/auth/register">Support</a>
+      <a mat-menu-item routerLink="/gifts/auth/login"><i class="fa fa-sign-in"></i></a>
+    </mat-menu>
   </span>
 </mat-toolbar>
