--- a/client/src/app/gifts-track-order/track-order.component.html
+++ b/client/src/app/gifts-track-order/track-order.component.html
@@ -1,7 +1,7 @@
 <section class="container">
   <h2 class="py-5">Track Order</h2>
   <form>
-    <mat-form-field>
+    <div>
       <mat-label>Order No.</mat-label>
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Order No." #orderNo required />
@@ -9,7 +9,7 @@
           <button class="btn btn-primary fa fa-search" type="button" (click)="ShowOrderStatus(orderNo.value)"></button>
         </div>
       </div>
-    </mat-form-field>
+    </div>
   </form>
   <div class="p-3">
     <table>
