--- a/client/src/app/staffs/staffs-navbar/staffs-navbar.component.html
+++ b/client/src/app/staffs/staffs-navbar/staffs-navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="shadow">
   <span>
     <button mat-button matTooltip="sidebar">
-      <i class="fa fa-files">sidebar-icon</i>
+      <i class="fa fa-align-justify"></i>
     </button>
   </span>
   <span class="mr-auto">Tiptop Staffs</span>
