--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -49,7 +49,7 @@
             </div>
           </mat-error>
         </mat-form-field>
-        <div>
+        <div class="text-center">
           <mat-error>{{ errMsg }}</mat-error>
           <button mat-raised-button (click)="onSubmit()" color="primary" [disabled]="loading">
             Register
