--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex py-5">
+<div class="container d-flex py-5">
   <mat-card class="container col-sm-12 col-md-6 col-lg-4">
     <mat-card-title class="text-center">
       <h2>Welcome! Please login.</h2>
