--- a/client/src/app/staffs/home/home.component.html
+++ b/client/src/app/staffs/home/home.component.html
@@ -1,3 +1,10 @@
 <staffs-navbar></staffs-navbar>
 
 <router-outlet></router-outlet>
+
+
+<a routerLink='/staffs'>staffs</a>
+<a routerLink='/staffs/auth'>auth</a>
+<a routerLink='/staffs/new-staff'>new-staff</a>
+<a routerLink='/staffs/products'>products</a>
+<a routerLink='/staffs/orders'>orders</a>
